tests/samples/negative/pointers/unsafe_ptrcast_required.ax
module unsafe_ptrcast_required;

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *mut i32 = &value;
    let erased: *mut void = ptrcast[*mut void](ptr);
    return cast[i32](ptraddr(erased));
}
